# session_py

./: .gitignore  CURVE_PLANE_INTERSECTION_ANALYSIS.md  NURBSCURVE_IMPLEMENTATION.md  README.md  doc.bat  doc.sh  main.py  pyproject.toml  test.bat  test.sh  test_arrow.json  test_boundingbox.json  test_color.json  test_curve_plane_intersection.py  test_cylinder.json  test_edge.json  test_graph.json  test_line.json  test_mesh.json  test_nurbs_simple.py  test_objects.json  test_plane.json  test_point.json  test_pointcloud.json  test_polyline.json  test_quaternion.json  test_session.json  test_tree.json  test_treenode.json  test_vector.json  test_vertex.json  test_xform.json
docs/: README.md  conf.py  theme_examples.py
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree
docs/_build/html/: genindex.html  index.html  (+2 more)
docs/_static/: doxygen-awesome-like.css  green-syntax.css
docs_output/html/: .buildinfo  api.html  objects.inv  search.html
examples/: bvh_demo.py
src/session_py/: __init__.py  arrow.py  arrow_test.py  boundingbox.py  boundingbox_test.py  bvh.py  bvh_test.py  color.py  color_test.py  cylinder.py  cylinder_test.py  edge.py  edge_test.py  encoders.py  encoders_test.py  graph.py  graph_test.py  intersection.py  intersection_test.py  line.py  line_test.py  mesh.py  mesh_test.py  nurbscurve.py  obj.py  objects.py  objects_test.py  plane.py  plane_test.py  point.py  point_test.py  pointcloud.py  pointcloud_test.py  polyline.py  polyline_test.py  quaternion.py  quaternion_test.py  ray_box_intersection.py  session.py  session_test.py  (+12 more)
(+24 files in other folders)
