[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "session_py"
version = "0.1.0"
description = "A minimal Python geometry library"
authors = [{name = "Petras Vestartas", email = "petrasvestartas@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20.0",
    "numba>=0.56.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pre-commit",
    "build",
    { include-group = "tests" },
    { include-group = "docs" },
]
tests = []
docs = [
    "sphinx",
    "sphinx-compas-theme",
]

[project.urls]
Homepage = "https://github.com/petrasvestartas/session"
Repository = "https://github.com/petrasvestartas/session"

[tool.hatch.build.targets.wheel]

[tool.hatch.build]
src-layout = true

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]